--- a/gb/21/1/6/n12670005.md
+++ b/gb/21/1/6/n12670005.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/syqanp3655/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/syqanp3655/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/syqanp3655/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/syqanp3655/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/syqanp3655/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/syqanp3655/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/syqanp3655/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/syqanp3655/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何应对孩子负面的自我评价</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/Fotolia_175086446_Subscription_L-600x400.jpg" />
 <h6>当孩子出现负面的自我评价时，父母可使用一些技巧来应对孩子出现的情况。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2021年01月06日讯】没有父母愿意听到<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>说“我很笨”或“我很傻”，甚至更糟的是“没有人爱我”。您不用惊慌，也不用尽力让孩子避免出现这种情况，而是不妨使用接下来提到的这些技巧<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E5%BA%94%E5%AF%B9.md#1">应对</a>孩子负面的<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7.md#1">自我评价</a>。</p>
-<p>下面这个场景也许您很熟悉，<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>正在做写作作业，写作并不容易，橡皮擦过的污迹布满了页面，他对自己的表现很不满意，然后会说“我真笨”之类的话，甚至会用拳头凿桌子并大声叫嚷。难道孩子正在做戏剧表演，或者他真感到自己很笨吗？</p>
-<h2>如何<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E5%BA%94%E5%AF%B9.md#1">应对</a>负面的自我</h2>
+<p>【大纪元2021年01月06日讯】没有父母愿意听到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>说“我很笨”或“我很傻”，甚至更糟的是“没有人爱我”。您不用惊慌，也不用尽力让孩子避免出现这种情况，而是不妨使用接下来提到的这些技巧<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BA%94%E5%AF%B9.md#1">应对</a>孩子负面的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7.md#1">自我评价</a>。</p>
+<p>下面这个场景也许您很熟悉，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>正在做写作作业，写作并不容易，橡皮擦过的污迹布满了页面，他对自己的表现很不满意，然后会说“我真笨”之类的话，甚至会用拳头凿桌子并大声叫嚷。难道孩子正在做戏剧表演，或者他真感到自己很笨吗？</p>
+<h2>如何<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BA%94%E5%AF%B9.md#1">应对</a>负面的自我</h2>
 <p>当孩子的嘴里冒出负面的自言自语时，您下意识的反应就是制止它，给孩子一些确认或说服他们自己这样想是不对的。很不幸，他们说这些话正反应当时的感受，他们没有感到你说的“很棒”或者“很可爱”，他们确实感到自己“笨“，”愚蠢“，并且 ”是世界上最糟糕的孩子“。与其直接改变孩子的想法，不如尝试下面的这些做法：</p>
 <ul>
 <li>共情：设身处地试着了解孩子的感受。可以说，“写作任务很有挑战性，是吗？”或着说“听起来你很沮丧！” 如果您想不出要说些什么，请尝试一个简单的回答，例如“那很难”或“我们拥抱一下？”，以此向孩子表示您很能理解他，并从内心支持他。</li>
@@ -28,7 +28,7 @@
 <li>毅力的价值：千里之行，始于足下，从小的步骤起步，克服苦难，并逐步达到目标。鼓励孩子“你正在为自己的目标努力学习，“或者”你确实花费了很多精力。“，帮助孩子看到过程中的收益，而不只是最终的结果。</li>
 <li>专注于那些导致成功的、克服障碍的或接近目标的小步骤。诸如“你正在为此努力工作,”或“这花费了很多精力！”之类的话语，可以帮助您的孩子看到在这个过程中的收益，而不只是最终的结果。</li>
 <li>教一些应对技巧：让您的孩子学习各种应对和镇静技巧，深呼吸并创造积极有益的口头禅。经常练习这些技能，这样您的孩子就会做好准备，并且知道如何处理令人沮丧的情况和想法。</li>
-<li>寻求支持：如果您与孩子一起努力了一段时间，但仍然听到他负面的<ahref="https://github.com/syqanp3655/djy/blob/master/gb/tag/%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7.md#1">自我评价</a>，或者威胁要伤害自己或他人，这时就应该寻求当地精神卫生服务的帮助了。极端的情况是如果您的孩子企图自杀，请立即寻求帮助。</li>
+<li>寻求支持：如果您与孩子一起努力了一段时间，但仍然听到他负面的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7.md#1">自我评价</a>，或者威胁要伤害自己或他人，这时就应该寻求当地精神卫生服务的帮助了。极端的情况是如果您的孩子企图自杀，请立即寻求帮助。</li>
 </ul>
 <p>责任编辑：瑞木悦</p>
 <p>&nbsp;</p>
@@ -37,48 +37,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/8/8/23/n2238249.md#1">学者：羞辱孩子 易导致反社会行为</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/9/7/2/n2577056.md#1">不必花钱的教养方法</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/11/5/15/n3257868.md#1">负面评价  困扰过重儿</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/14/5/11/n4152433.md#1">儿童易受心理暗示影响  积极暗示激发潜能</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/15/1/14/n4341945.md#1">给孩子一颗大爱之心志愿活动</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/16/3/20/n4667218.md#1">心理学家：父母做这12件事 孩子更有自信</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/12/10/n10901003.md#1">华裔青少年与父母缺沟通 易引发抑郁</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/6/n12669428.md#1">UC建校30年全球排名跃升?校长对未来乐观</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/5/n12667260.md#1">专家：过度依赖中国学生 澳大学难以为继</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/8/23/n2238249.md#1">学者：羞辱孩子 易导致反社会行为</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/7/2/n2577056.md#1">不必花钱的教养方法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/5/15/n3257868.md#1">负面评价  困扰过重儿</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/5/11/n4152433.md#1">儿童易受心理暗示影响  积极暗示激发潜能</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/1/14/n4341945.md#1">给孩子一颗大爱之心志愿活动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/20/n4667218.md#1">心理学家：父母做这12件事 孩子更有自信</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/10/n10901003.md#1">华裔青少年与父母缺沟通 易引发抑郁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/syqanp3655/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/1/n10107668.md#1" target="_blank">林辉：导演陈凯歌对父亲终生的愧疚</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/5/n12668830.md#1">【秦鹏直播】拳打伊朗脚踢中共 川普在全球收网</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12664729.md#1">【直播预告】1/6美国会联席会议及大型集会</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/5/n12668497.md#1">【新闻大家谈】决战前援兵到 明暗线抽沼泽</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12666220.md#1">【独家】川普在宾州的43.2万选票被删除</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12666762.md#1">“‘李娜’退出中国国籍”上微博热搜</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12666258.md#1">传美方已掌控证人 美国安高官：实验室泄病毒</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12664632.md#1">赵丽颖发文宣传新剧 意外暴露用“古董”手机</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12666681.md#1">林青霞贺年图片藏玄机？网络疯传其豪门婚变</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/3/n12664153.md#1">玄彬和孙艺真恋情公开 江疏影的反应笑翻网络</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/3/n12663471.md#1">台男星出道13年没红过 改名黄立今办婚宴</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12665282.md#1">马铃薯是减肥者的好淀粉 这样保存不怕发芽</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/3/n12663493.md#1">日本吉卜力工作室 上千张动画图片免费下载</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/syqanp3655/djy/blob/master/gb/21/1/4/n12665269.md#1">印度警察救起铁轨上的老人 再赏他耳光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/syqanp3655/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/syqanp3655/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/6/n12670005.htm">如何应对孩子负面的自我评价</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/6/n12670005.htm">如何应对孩子负面的自我评价</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/syqanp3655/djy/blob/master/gb/21/1/6/n12670005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/syqanp3655/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/syqanp3655/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/syqanp3655/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/syqanp3655/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/syqanp3655/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/1/6/n12670005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
